// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DecisioningMatrix snapshots snapshot: approve cell active 1`] = `
<div
  aria-label="Loan decisioning matrix — TRUST vs Financial Health"
  class="inline-block"
  role="group"
>
  <svg
    aria-hidden="false"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <text
      dominant-baseline="central"
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      transform="rotate(-90, 16, 128)"
      x="8"
      y="128"
    >
      TRUST ↑
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="68"
    >
      High ≥
      60
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low &lt;
      60
    </text>
    <text
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      x="260"
      y="276"
    >
      Financial Health →
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="154"
      y="262"
    >
      Low &lt;
      50
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="366"
      y="262"
    >
      High ≥
      50
    </text>
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <g
      aria-label="High TRUST, Low Financial Health: Conditional Approve Cash-flow coaching — EMI aligned to crop"
      aria-selected="false"
      data-active="false"
      data-cell="conditional"
      data-testid="matrix-cell-conditional"
      role="gridcell"
      tabindex="0"
    >
      <rect
        fill="#fff8e1"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="10"
      />
      <text
        fill="#B45309"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="44"
      >
        Conditional Approve
      </text>
      <text
        fill="#B45309"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="62"
      >
        Cash-flow coaching
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="84"
      >
        Ticket: 
        Reduced
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="98"
      >
        Tenor: 
        Seasonal
      </text>
    </g>
    <g
      aria-label="High TRUST, High Financial Health: Approve Standard terms — Standard terms (current position)"
      aria-selected="true"
      data-active="true"
      data-cell="approve"
      data-testid="matrix-cell-approve"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#c8e6c9"
        height="116"
        rx="8"
        stroke="#15803D"
        stroke-width="2.5"
        width="208"
        x="262"
        y="10"
      />
      <text
        fill="#15803D"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="44"
      >
        Approve
      </text>
      <text
        fill="#15803D"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="62"
      >
        Standard terms
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="84"
      >
        Ticket: 
        Standard
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="98"
      >
        Tenor: 
        12 months
      </text>
      <circle
        cx="366"
        cy="110"
        fill="#15803D"
        r="5"
      />
      <text
        fill="#15803D"
        font-size="9"
        font-weight="600"
        x="376"
        y="114"
      >
        Current
      </text>
    </g>
    <g
      aria-label="Low TRUST, Low Financial Health: Decline Coaching path + re-apply — Coaching path + re-apply 90 days"
      aria-selected="false"
      data-active="false"
      data-cell="decline"
      data-testid="matrix-cell-decline"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#f5f5f5"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="130"
      />
      <text
        fill="#6B7280"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="164"
      >
        Decline
      </text>
      <text
        fill="#6B7280"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="182"
      >
        Coaching path + re-apply
      </text>
    </g>
    <g
      aria-label="Low TRUST, High Financial Health: Refer for Review Verify first — Extra KYC required"
      aria-selected="false"
      data-active="false"
      data-cell="refer"
      data-testid="matrix-cell-refer"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e3f2fd"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="130"
      />
      <text
        fill="#1D4ED8"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="164"
      >
        Refer for Review
      </text>
      <text
        fill="#1D4ED8"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="182"
      >
        Verify first
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="204"
      >
        Ticket: 
        Hold
      </text>
    </g>
    <g
      aria-label="Score position: TRUST 80, Financial Health 75"
    >
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="360"
        x2="372"
        y1="56"
        y2="56"
      />
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="366"
        x2="366"
        y1="50"
        y2="62"
      />
      <circle
        cx="366"
        cy="56"
        fill="#1e293b"
        r="4"
      />
      <rect
        fill="#1e293b"
        height="24"
        opacity="0.9"
        rx="4"
        width="74"
        x="374"
        y="38"
      />
      <text
        fill="white"
        font-size="9"
        font-weight="600"
        x="380"
        y="54"
      >
        T:
        80
         F:
        75
      </text>
    </g>
  </svg>
</div>
`;

exports[`DecisioningMatrix snapshots snapshot: conditional cell active 1`] = `
<div
  aria-label="Loan decisioning matrix — TRUST vs Financial Health"
  class="inline-block"
  role="group"
>
  <svg
    aria-hidden="false"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <text
      dominant-baseline="central"
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      transform="rotate(-90, 16, 128)"
      x="8"
      y="128"
    >
      TRUST ↑
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="68"
    >
      High ≥
      60
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low &lt;
      60
    </text>
    <text
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      x="260"
      y="276"
    >
      Financial Health →
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="154"
      y="262"
    >
      Low &lt;
      50
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="366"
      y="262"
    >
      High ≥
      50
    </text>
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <g
      aria-label="High TRUST, Low Financial Health: Conditional Approve Cash-flow coaching — EMI aligned to crop (current position)"
      aria-selected="true"
      data-active="true"
      data-cell="conditional"
      data-testid="matrix-cell-conditional"
      role="gridcell"
      tabindex="0"
    >
      <rect
        fill="#ffecb3"
        height="116"
        rx="8"
        stroke="#B45309"
        stroke-width="2.5"
        width="208"
        x="50"
        y="10"
      />
      <text
        fill="#B45309"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="44"
      >
        Conditional Approve
      </text>
      <text
        fill="#B45309"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="62"
      >
        Cash-flow coaching
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="84"
      >
        Ticket: 
        Reduced
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="98"
      >
        Tenor: 
        Seasonal
      </text>
      <circle
        cx="154"
        cy="110"
        fill="#B45309"
        r="5"
      />
      <text
        fill="#B45309"
        font-size="9"
        font-weight="600"
        x="164"
        y="114"
      >
        Current
      </text>
    </g>
    <g
      aria-label="High TRUST, High Financial Health: Approve Standard terms — Standard terms"
      aria-selected="false"
      data-active="false"
      data-cell="approve"
      data-testid="matrix-cell-approve"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e8f5e9"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="10"
      />
      <text
        fill="#15803D"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="44"
      >
        Approve
      </text>
      <text
        fill="#15803D"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="62"
      >
        Standard terms
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="84"
      >
        Ticket: 
        Standard
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="98"
      >
        Tenor: 
        12 months
      </text>
    </g>
    <g
      aria-label="Low TRUST, Low Financial Health: Decline Coaching path + re-apply — Coaching path + re-apply 90 days"
      aria-selected="false"
      data-active="false"
      data-cell="decline"
      data-testid="matrix-cell-decline"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#f5f5f5"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="130"
      />
      <text
        fill="#6B7280"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="164"
      >
        Decline
      </text>
      <text
        fill="#6B7280"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="182"
      >
        Coaching path + re-apply
      </text>
    </g>
    <g
      aria-label="Low TRUST, High Financial Health: Refer for Review Verify first — Extra KYC required"
      aria-selected="false"
      data-active="false"
      data-cell="refer"
      data-testid="matrix-cell-refer"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e3f2fd"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="130"
      />
      <text
        fill="#1D4ED8"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="164"
      >
        Refer for Review
      </text>
      <text
        fill="#1D4ED8"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="182"
      >
        Verify first
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="204"
      >
        Ticket: 
        Hold
      </text>
    </g>
    <g
      aria-label="Score position: TRUST 70, Financial Health 30"
    >
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="169.2"
        x2="181.2"
        y1="80"
        y2="80"
      />
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="175.2"
        x2="175.2"
        y1="74"
        y2="86"
      />
      <circle
        cx="175.2"
        cy="80"
        fill="#1e293b"
        r="4"
      />
      <rect
        fill="#1e293b"
        height="24"
        opacity="0.9"
        rx="4"
        width="74"
        x="183.2"
        y="62"
      />
      <text
        fill="white"
        font-size="9"
        font-weight="600"
        x="189.2"
        y="78"
      >
        T:
        70
         F:
        30
      </text>
    </g>
  </svg>
</div>
`;

exports[`DecisioningMatrix snapshots snapshot: decline cell active 1`] = `
<div
  aria-label="Loan decisioning matrix — TRUST vs Financial Health"
  class="inline-block"
  role="group"
>
  <svg
    aria-hidden="false"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <text
      dominant-baseline="central"
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      transform="rotate(-90, 16, 128)"
      x="8"
      y="128"
    >
      TRUST ↑
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="68"
    >
      High ≥
      60
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low &lt;
      60
    </text>
    <text
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      x="260"
      y="276"
    >
      Financial Health →
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="154"
      y="262"
    >
      Low &lt;
      50
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="366"
      y="262"
    >
      High ≥
      50
    </text>
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <g
      aria-label="High TRUST, Low Financial Health: Conditional Approve Cash-flow coaching — EMI aligned to crop"
      aria-selected="false"
      data-active="false"
      data-cell="conditional"
      data-testid="matrix-cell-conditional"
      role="gridcell"
      tabindex="0"
    >
      <rect
        fill="#fff8e1"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="10"
      />
      <text
        fill="#B45309"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="44"
      >
        Conditional Approve
      </text>
      <text
        fill="#B45309"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="62"
      >
        Cash-flow coaching
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="84"
      >
        Ticket: 
        Reduced
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="98"
      >
        Tenor: 
        Seasonal
      </text>
    </g>
    <g
      aria-label="High TRUST, High Financial Health: Approve Standard terms — Standard terms"
      aria-selected="false"
      data-active="false"
      data-cell="approve"
      data-testid="matrix-cell-approve"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e8f5e9"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="10"
      />
      <text
        fill="#15803D"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="44"
      >
        Approve
      </text>
      <text
        fill="#15803D"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="62"
      >
        Standard terms
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="84"
      >
        Ticket: 
        Standard
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="98"
      >
        Tenor: 
        12 months
      </text>
    </g>
    <g
      aria-label="Low TRUST, Low Financial Health: Decline Coaching path + re-apply — Coaching path + re-apply 90 days (current position)"
      aria-selected="true"
      data-active="true"
      data-cell="decline"
      data-testid="matrix-cell-decline"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e0e0e0"
        height="116"
        rx="8"
        stroke="#6B7280"
        stroke-width="2.5"
        width="208"
        x="50"
        y="130"
      />
      <text
        fill="#6B7280"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="164"
      >
        Decline
      </text>
      <text
        fill="#6B7280"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="182"
      >
        Coaching path + re-apply
      </text>
      <circle
        cx="154"
        cy="230"
        fill="#6B7280"
        r="5"
      />
      <text
        fill="#6B7280"
        font-size="9"
        font-weight="600"
        x="164"
        y="234"
      >
        Current
      </text>
    </g>
    <g
      aria-label="Low TRUST, High Financial Health: Refer for Review Verify first — Extra KYC required"
      aria-selected="false"
      data-active="false"
      data-cell="refer"
      data-testid="matrix-cell-refer"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e3f2fd"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="130"
      />
      <text
        fill="#1D4ED8"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="164"
      >
        Refer for Review
      </text>
      <text
        fill="#1D4ED8"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="182"
      >
        Verify first
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="204"
      >
        Ticket: 
        Hold
      </text>
    </g>
    <g
      aria-label="Score position: TRUST 35, Financial Health 25"
    >
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="148"
        x2="160"
        y1="164"
        y2="164"
      />
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="154"
        x2="154"
        y1="158"
        y2="170"
      />
      <circle
        cx="154"
        cy="164"
        fill="#1e293b"
        r="4"
      />
      <rect
        fill="#1e293b"
        height="24"
        opacity="0.9"
        rx="4"
        width="74"
        x="162"
        y="146"
      />
      <text
        fill="white"
        font-size="9"
        font-weight="600"
        x="168"
        y="162"
      >
        T:
        35
         F:
        25
      </text>
    </g>
  </svg>
</div>
`;

exports[`DecisioningMatrix snapshots snapshot: refer cell active 1`] = `
<div
  aria-label="Loan decisioning matrix — TRUST vs Financial Health"
  class="inline-block"
  role="group"
>
  <svg
    aria-hidden="false"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <text
      dominant-baseline="central"
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      transform="rotate(-90, 16, 128)"
      x="8"
      y="128"
    >
      TRUST ↑
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="68"
    >
      High ≥
      60
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low &lt;
      60
    </text>
    <text
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      x="260"
      y="276"
    >
      Financial Health →
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="154"
      y="262"
    >
      Low &lt;
      50
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="366"
      y="262"
    >
      High ≥
      50
    </text>
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <g
      aria-label="High TRUST, Low Financial Health: Conditional Approve Cash-flow coaching — EMI aligned to crop"
      aria-selected="false"
      data-active="false"
      data-cell="conditional"
      data-testid="matrix-cell-conditional"
      role="gridcell"
      tabindex="0"
    >
      <rect
        fill="#fff8e1"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="10"
      />
      <text
        fill="#B45309"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="44"
      >
        Conditional Approve
      </text>
      <text
        fill="#B45309"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="62"
      >
        Cash-flow coaching
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="84"
      >
        Ticket: 
        Reduced
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="98"
      >
        Tenor: 
        Seasonal
      </text>
    </g>
    <g
      aria-label="High TRUST, High Financial Health: Approve Standard terms — Standard terms"
      aria-selected="false"
      data-active="false"
      data-cell="approve"
      data-testid="matrix-cell-approve"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e8f5e9"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="10"
      />
      <text
        fill="#15803D"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="44"
      >
        Approve
      </text>
      <text
        fill="#15803D"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="62"
      >
        Standard terms
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="84"
      >
        Ticket: 
        Standard
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="98"
      >
        Tenor: 
        12 months
      </text>
    </g>
    <g
      aria-label="Low TRUST, Low Financial Health: Decline Coaching path + re-apply — Coaching path + re-apply 90 days"
      aria-selected="false"
      data-active="false"
      data-cell="decline"
      data-testid="matrix-cell-decline"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#f5f5f5"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="130"
      />
      <text
        fill="#6B7280"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="164"
      >
        Decline
      </text>
      <text
        fill="#6B7280"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="182"
      >
        Coaching path + re-apply
      </text>
    </g>
    <g
      aria-label="Low TRUST, High Financial Health: Refer for Review Verify first — Extra KYC required (current position)"
      aria-selected="true"
      data-active="true"
      data-cell="refer"
      data-testid="matrix-cell-refer"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#bbdefb"
        height="116"
        rx="8"
        stroke="#1D4ED8"
        stroke-width="2.5"
        width="208"
        x="262"
        y="130"
      />
      <text
        fill="#1D4ED8"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="164"
      >
        Refer for Review
      </text>
      <text
        fill="#1D4ED8"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="182"
      >
        Verify first
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="204"
      >
        Ticket: 
        Hold
      </text>
      <circle
        cx="366"
        cy="230"
        fill="#1D4ED8"
        r="5"
      />
      <text
        fill="#1D4ED8"
        font-size="9"
        font-weight="600"
        x="376"
        y="234"
      >
        Current
      </text>
    </g>
    <g
      aria-label="Score position: TRUST 40, Financial Health 65"
    >
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="317.6"
        x2="329.6"
        y1="152"
        y2="152"
      />
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="323.6"
        x2="323.6"
        y1="146"
        y2="158"
      />
      <circle
        cx="323.6"
        cy="152"
        fill="#1e293b"
        r="4"
      />
      <rect
        fill="#1e293b"
        height="24"
        opacity="0.9"
        rx="4"
        width="74"
        x="331.6"
        y="134"
      />
      <text
        fill="white"
        font-size="9"
        font-weight="600"
        x="337.6"
        y="150"
      >
        T:
        40
         F:
        65
      </text>
    </g>
  </svg>
</div>
`;
